css/readers.css
.x.axis{
  font-size: 15px;
  opacity: 0.5 !important;
}

.y.axis {
font-size: 10px;
fill: steelblue;
}

.bar{
    fill: #000000;
    opacity: 0.2;
}


svg {
    background: none repeat scroll 0 0 #EEEEEE;
    border-radius: 9px 9px 9px 9px;
    margin-top: 10px !important;
    margin-bottom: 10px;
    padding-bottom: 20px;
    padding-right: 5px;
    width: 100%;
}

.controls {
	margin-top: 20px;
}

.label {
	width: 140px;
	cursor: pointer;
}

.axis path,
.axis line {
  fill: none;
  stroke: #000;
  shape-rendering: crispEdges;
}

.y.axis path{
  opacity: 0.5 !important;
 }


.ylabel {
  fill: steelblue;
  font-size: 13px;
}

.line {
  fill: none;
  stroke: steelblue;
  stroke-width: 1.5px;
}

.data-point {
  stroke: steelblue;
  stroke-width: 2;
  fill: #FFF;
}

.graphs {
    vertical-align: middle;
}

.copy {
    margin-top: 40px;
    font-size: 15px;
}

svg rect:hover {
  opacity: 0.4;
}

.barvalue {
  font-size: 12px;
  fill: #444;
}

